--- a/client-favoritos/index.html
+++ b/client-favoritos/index.html
@@ -19,6 +19,11 @@
       </head>
 
       <body>
-        <my-app>Cargando...</my-app>
+            <section id="content">
+                <my-app>Cargando...</my-app>
+            </section>
       </body>
+      <footer>
+          &copy; Probando NodeJs y Angular2
+      </footer>
     </html>
